[metadata]
name = audio-analysis-yancyvance
version = 0.0.1
author = Yancy Vance
author_email = yancyvance@gmail.com
description = Scripts used for analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yancyvance/audio-analysis
project_urls =
    Bug Tracker = https://github.com/yancyvance/audio-analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires = [
    'librosa<=0.9.1',
    'pydub<=0.25.1',
    'openpyxl'
    'pandas',
    'numpy',
    'scipy'
]
    
[options]
package_dir =
    = src
packages = find:
python_requies = >= 3.6

[options.packages.find]
where = src